Implement 'favorite recipes' feature with GET/POST/DELETE endpoints and integrate with frontend tabs.

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://dsxozhds:IzsD9lLclY06rCttfvdihnXYwsc1vl2x@hansken.db.elephantsql.com/dsxozhds
+DATABASE_URL=postgres://zwsrbkfl:kOTywfRnzBFVQETDEO06NDGj2c5YNhUE@hansken.db.elephantsql.com/zwsrbkfl
 API_KEY=2953dc8c369f4871bbae921cd170d019
