--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 DATABASE_URL=postgres://zwsrbkfl:kOTywfRnzBFVQETDEO06NDGj2c5YNhUE@hansken.db.elephantsql.com/zwsrbkfl
 API_KEY=2953dc8c369f4871bbae921cd170d019
+JWT_SECRET=Vikingstothesuperbowl
