--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,9 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.13.0",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -30,8 +32,6 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "ts-jest": "^29.1.2"
   }
 }
