--- a/backend/package.json
+++ b/backend/package.json
@@ -17,9 +17,9 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.13.0",
-    "validator": "^13.11.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
